force-app/main/default/objects/Refund__c/Refund__c.object-meta.xml
<CustomObject>
    <label>환불내역</label>
    <nameField>
        <displayFormat>환불-{000000}</displayFormat>
        <label>환불접수번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>