force-app/main/default/objects/Refund__c/fields/AccountPhone__c.field-meta.xml
<CustomField>
    <fullName>AccountPhone__c</fullName>
    <formula>OrderNumber__r.AccountPhone__c</formula>
    <label>고객전화번호</label>
    <type>Text</type>
</CustomField>