force-app/main/default/objects/Refund__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <formula>OrderNumber__r.OrderDate__c</formula>
    <label>판매일자</label>
    <type>Date</type>
</CustomField>