force-app/main/default/objects/Refund__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>주문번호</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>OrderHistory__c.SalesBranch__r.Name</field>
            <operation>equals</operation>
            <valueField>$User.Department</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Id</field>
            <operation>equals</operation>
            <value>00eIR000001fnLEYAY</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OrderHistory__c</referenceTo>
    <relationshipLabel>환불내역</relationshipLabel>
    <relationshipName>HistoryOrderNumbers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>