force-app/main/default/objects/Refund__c/fields/RefundAmount__c.field-meta.xml
<CustomField>
    <fullName>RefundAmount__c</fullName>
    <formula>OrderNumber__r.TotalPrice__c</formula>
    <label>환불금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>