force-app/main/default/objects/Refund__c/fields/RefundDate__c.field-meta.xml
<CustomField>
    <fullName>RefundDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>환불일자</label>
    <required>true</required>
    <type>Date</type>
</CustomField>