force-app/main/default/objects/Refund__c/fields/RefundReason__c.field-meta.xml
<CustomField>
    <fullName>RefundReason__c</fullName>
    <label>환불사유</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>제품불량</fullName>
            </value>
            <value>
                <fullName>오배송</fullName>
            </value>
            <value>
                <fullName>단순변심</fullName>
            </value>
            <value>
                <fullName>기타사유</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>