force-app/main/default/objects/Refund__c/validationRules/AlreadyRefunded.validationRule-meta.xml
<ValidationRule>
    <fullName>AlreadyRefunded</fullName>
    <active>true</active>
    <errorConditionFormula>OrderNumber__r.RecordType.Name = &apos;환불건&apos;</errorConditionFormula>
    <errorDisplayField>OrderNumber__c</errorDisplayField>
    <errorMessage>이미 환불처리된 주문입니다.</errorMessage>
</ValidationRule>