force-app/main/default/objects/Refund__c/validationRules/OrderAccountMatch.validationRule-meta.xml
<ValidationRule>
    <fullName>OrderAccountMatch</fullName>
    <active>true</active>
    <errorConditionFormula>OrderNumber__r.AccountName__c   &lt;&gt;   AccountName__c</errorConditionFormula>
    <errorDisplayField>OrderNumber__c</errorDisplayField>
    <errorMessage>해당 고객의 주문이 아닙니다.</errorMessage>
</ValidationRule>