force-app/main/default/objects/Refund__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>RefundReason__c</columns>
    <columns>RefundDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>